--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <ul>
     <li>
       <a href="#">
-        <i>
+        <i class="icon">
           <svg><use xlink:href="images/dino-icons.svg#brachiosaurus"></use></svg>
         </i>
         <span>Brachiosaurus</span>
@@ -20,7 +20,7 @@
 
     <li>
       <a href="#">
-        <i>
+        <i class="icon">
           <svg><use xlink:href="images/dino-icons.svg#micropachycephalosaurus"></use></svg>
         </i>
         <span>Micropachycephalosaurus</span>
@@ -29,7 +29,7 @@
 
     <li>
       <a href="#">
-        <i>
+        <i class="icon">
           <svg><use xlink:href="images/dino-icons.svg#velociraptor"></use></svg>
         </i>
         <span>Velociraptor</span>
